Espressif/build/log/idf_py_stdout_output_13089
Command: ninja all
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj 
/home/t70n/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/t70n/Documents/Corto-Densimeter/Espressif/build/config -I/home/t70n/Documents/Corto-Densimeter/Espressif/main -I/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/I2C -I/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/MPU6050 -I/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/LED -I/home/t70n/esp/v5.5.1/esp-idf/components/newlib/platform_include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/config/include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/config/riscv/include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/t70n/esp/v5.5.1/esp-idf/components/heap/include -I/home/t70n/esp/v5.5.1/esp-idf/components/heap/tlsf -I/home/t70n/esp/v5.5.1/esp-idf/components/log/include -I/home/t70n/esp/v5.5.1/esp-idf/components/soc/include -I/home/t70n/esp/v5.5.1/esp-idf/components/soc/esp32c6 -I/home/t70n/esp/v5.5.1/esp-idf/components/soc/esp32c6/include -I/home/t70n/esp/v5.5.1/esp-idf/components/soc/esp32c6/register -I/home/t70n/esp/v5.5.1/esp-idf/components/hal/platform_port/include -I/home/t70n/esp/v5.5.1/esp-idf/components/hal/esp32c6/include -I/home/t70n/esp/v5.5.1/esp-idf/components/hal/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_rom/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_rom/esp32c6/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_rom/esp32c6 -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_common/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_system/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_system/port/soc -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_system/port/include/riscv -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -I/home/t70n/esp/v5.5.1/esp-idf/components/riscv/include -I/home/t70n/esp/v5.5.1/esp-idf/components/driver/deprecated -I/home/t70n/esp/v5.5.1/esp-idf/components/driver/i2c/include -I/home/t70n/esp/v5.5.1/esp-idf/components/driver/touch_sensor/include -I/home/t70n/esp/v5.5.1/esp-idf/components/driver/twai/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_pm/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_ringbuf/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_pcnt/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_gptimer/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_mcpwm/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_ana_cmpr/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_i2s/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_sdmmc/include -I/home/t70n/esp/v5.5.1/esp-idf/components/sdmmc/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_sdspi/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_sdio/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_dac/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_rmt/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_tsens/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_sdm/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_i2c/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_uart/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_ledc/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_parlio/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_twai/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/t70n/Documents/Corto-Densimeter/Espressif=. -fmacro-prefix-map=/home/t70n/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj -c /home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c
/home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c: In function 'app_main':
/home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c:28:5: error: too few arguments to function 'mpu6050_wake_up'
   28 |     mpu6050_wake_up(dev_handle);                                                        // Réveiller le MPU6050
      |     ^~~~~~~~~~~~~~~
In file included from /home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c:3:
/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/MPU6050/mpu6050_functions.h:13:11: note: declared here
   13 | esp_err_t mpu6050_wake_up(i2c_master_dev_handle_t dev_handle, i2c_master_bus_handle_t bus_handle);
      |           ^~~~~~~~~~~~~~~
/home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c:29:5: error: too few arguments to function 'mpu6050_configure'
   29 |     mpu6050_configure(dev_handle);                                                      // Configurer le MPU6050
      |     ^~~~~~~~~~~~~~~~~
/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/MPU6050/mpu6050_functions.h:15:11: note: declared here
   15 | esp_err_t mpu6050_configure(i2c_master_dev_handle_t dev_handle, i2c_master_bus_handle_t bus_handle);
      |           ^~~~~~~~~~~~~~~~~
/home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c:32:39: error: passing argument 2 of 'mpu6050_read_data' from incompatible pointer type [-Wincompatible-pointer-types]
   32 |         mpu6050_read_data(dev_handle, &mpu_data);                                       // Lire les données du MPU6050
      |                                       ^~~~~~~~~
      |                                       |
      |                                       mpu6050_data_t *
/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/MPU6050/mpu6050_functions.h:14:89: note: expected 'i2c_master_bus_handle_t' {aka 'struct i2c_master_bus_t *'} but argument is of type 'mpu6050_data_t *'
   14 | esp_err_t mpu6050_read_data(i2c_master_dev_handle_t dev_handle, i2c_master_bus_handle_t bus_handle, mpu6050_data_t *data);
      |                                                                 ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c:32:9: error: too few arguments to function 'mpu6050_read_data'
   32 |         mpu6050_read_data(dev_handle, &mpu_data);                                       // Lire les données du MPU6050
      |         ^~~~~~~~~~~~~~~~~
/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/MPU6050/mpu6050_functions.h:14:11: note: declared here
   14 | esp_err_t mpu6050_read_data(i2c_master_dev_handle_t dev_handle, i2c_master_bus_handle_t bus_handle, mpu6050_data_t *data);
      |           ^~~~~~~~~~~~~~~~~
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/t70n/Documents/Corto-Densimeter/Espressif/build/bootloader/esp-idf/esptool_py && /home/t70n/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/t70n/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/t70n/Documents/Corto-Densimeter/Espressif/build/bootloader/bootloader.bin
Bootloader binary size 0x57e0 bytes. 0x2820 bytes (31%) free.
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Hardware/MPU6050/mpu6050_functions.c.obj
ninja: build stopped: subcommand failed.
